--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
       "postcss": "^8.5.6",
       "react": "^19.0.0",
       "react-dom": "^19.0.0",
+      "recharts": "^2.15.3",
       "tailwind-merge": "^3.3.1",
       "tailwindcss": "^4.1.10"
    },
